# gram-newton-schulz

./: README.md  bad_autotuner.py  example.py  pyproject.toml  setup.py  submit_bad_autotuner.sh
benchmarks/: benchmark_gemm_symmetric.py  benchmark_newton_schulz.py
gram_newton_schulz/: __init__.py  autotune_restarts.py  coefficients.py  gram_newton_schulz.py  restart_autotune.py  standard_newton_schulz.py
gram_newton_schulz/muon/: muon.py
gram_newton_schulz/muon/muon_utils/: muon_matrix_split_utils.py
tests/: stress_test.py
